--- a/index.html
+++ b/index.html
@@ -132,44 +132,50 @@
 
 
                     <div class="row">
-                        <label class="col-3 col-form-label">Label</label>
+                        <label class="col-3 col-form-label">Label 1 </label>
                         <div class="col">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" placeholder="label 1"
+                            oninput="changeProjectInfo(event, 'label1' ,  'Label 1')">
                         </div>
                     </div>
 
                     <div class="row">
-                        <label class="col-3 col-form-label">Label</label>
+                        <label class="col-3 col-form-label">Label 2 </label>
                         <div class="col">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" placeholder="label 2"
+                            oninput="changeProjectInfo(event, 'label2', 'Label 2')">
                         </div>
                     </div>
 
                     <div class="row">
-                        <label class="col-3 col-form-label">Label</label>
+                        <label class="col-3 col-form-label">Label 3 </label>
                         <div class="col">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" placeholder="label 3"
+                            oninput="changeProjectInfo(event, 'label3', 'Label 3')">
                         </div>
                     </div>
 
                     <div class="row">
-                        <label class="col-3 col-form-label">Label</label>
+                        <label class="col-3 col-form-label">Label 4 </label>
                         <div class="col">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" placeholder="label 4"
+                            oninput="changeProjectInfo(event, 'label4', 'Label 4')">
                         </div>
                     </div>
 
                     <div class="row">
-                        <label class="col-3 col-form-label">Label</label>
+                        <label class="col-3 col-form-label">Label5 </label>
                         <div class="col">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" placeholder="label 5"
+                            oninput="changeProjectInfo(event, 'label5','Label 5')">
                         </div>
                     </div>
 
                     <div class="row">
-                        <label class="col-3 col-form-label">Label</label>
+                        <label class="col-3 col-form-label">Label 6</label>
                         <div class="col">
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" placeholder="label 6"
+                            oninput="changeProjectInfo(event, 'label6', 'Label 6')">
                         </div>
                     </div>
                 </div>
@@ -177,7 +183,7 @@
                 <div class="col card m-2 p-2">
                     <h5 class="display-3">Payment schedule</h5>
 
-                    <div class="container" id="payment-form">
+                    <div class="container" id="payment-form" >
 
 
 
